ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -253,7 +253,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assets/Foto.png"
+            src="./assets/Foto.png"
             alt="Mulher sorrindo com as mãos no coração"
           />
         </div>
@@ -448,7 +448,7 @@
         </div>
         <div class="col-b">
           <img
-            src="assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
+            src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
             alt="Doutor feliz segurando prancheta com pacientes"
           />
         </div>
@@ -539,7 +539,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assets/home-negro-com-moletom-bege-mexendo-no-celular.png"
+            src="./assets/home-negro-com-moletom-bege-mexendo-no-celular.png"
             alt="Homem negro com moletom bege mexendo no celular e sorrindo"
           />
         </div>
@@ -715,6 +715,6 @@
       </svg>
     </a>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
